# ChangeLog for games-rpg/valyriatear
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-rpg/valyriatear/ChangeLog,v 1.2 2013/05/03 14:24:59 hasufell Exp $

  03 May 2013; Julian Ospald <hasufell@gentoo.org> valyriatear-0.5.1.ebuild:
  fix licenses

*valyriatear-0.5.1 (02 May 2013)

  02 May 2013; Julian Ospald <hasufell@gentoo.org> +valyriatear-0.5.1.ebuild,
  +files/valyriatear-0.5.1-libpng-1.6.patch,
  +files/valyriatear-0.5.1-paths.patch, +metadata.xml:
  initial import
