@@ -3,18 +3,18 @@ Hash: SHA256
 
 AUX valyriatear-0.5.1-libpng-1.6.patch 568 SHA256 b8d9d7410c8d778c70343e4288cfeef9de380f7905dfc1200d526f0f2f4b19c1 SHA512 25d7f67cc54e46a8f4996bfd4d6a2a09f13ef73c6e44c155d3dab81d351c535637f14f643671a18b5a2828bdac437389f691e2b3903d22fecc81b2c84f85a73c WHIRLPOOL da77394968dba15899967b5192d53c4d651694cb1ca8c9a1115809fd8092212815fffac9cfb5e2e3f2c07e329f11f994c84a2f469d509da84988eabde5dbcb31
 AUX valyriatear-0.5.1-paths.patch 718 SHA256 8a40f2b7aab68b785941afc002a70446a2cd798003d9bddd77da5dd79870912d SHA512 cc75119df986749b84bc12c5e31df341d85fb090fccd8f1f7d5e13a7bcd022ad2ffff8d6875b22e9e8051c4e57da1bd093216ec78dd929aecbcabed97a273b82 WHIRLPOOL 8e2f432f85fd61c3c777ea59f04538ae4482cca2f92d4d28b862658201a09436abc500c91e6143f7f50879f9fda59b04cb1e578bd29324c41a0514c614f6073e
-DIST valyriatear-0.5.1.tar.gz 50024608 SHA256 756347f68b66c3a2dbadcfdcaaaf1e34895a6b5d9fa17c5d26af0fd9aae961e9 SHA512 2f9f9c23fbb537e532ba3791f6ddad0dae83a7c12c76ec3584174e96ea6fc0859537789991f210040ae967db2a1d4f55f8331f6722faff0cde3e4b5b835ec4ea WHIRLPOOL a7f8f232df7df0d915e2ac195809a5a827beeeb1efc7d532bfb53d153d19b91b71a50c9610047d07aa510cb1a3c6ed956dbe0c2756e475c72c5b4de503666fc3
-EBUILD valyriatear-0.5.1.ebuild 1528 SHA256 40dda5ed7cc63e7ae3d8c9712400658621a640c0c9382c594023f04e04ae417a SHA512 da398ca0cd4ae880a444366bf9d65510c2e8480f9a0779a0c7e57fab91c1037d5e004aa5571e3565a5094c01f76570116f5f42612870237ebf4d571496979b15 WHIRLPOOL 634fd6977933a440a872e8a4488202680a2f9f0c20641638987131c35d109fa31bfc9515fd691e068f9e79fe2283078739e30470d3f0f37c74b2faea5e50d9fe
-MISC ChangeLog 540 SHA256 58ed826a9815e735c96bb96c45f9d15ca6bce036b6c1c2ae294c6e6c5213223c SHA512 d4775917856f412cb0d4b71d388e9a2d68c4e8927bf9d92990143a223b3c9fe3ccdcd08abb5ee19e4cddb3e19342aac0402ac62e42f0675c29057aac34058481 WHIRLPOOL 6694ae10464eebda8971ea54ee7ad7624a06ca0cde9bfc34f8e649720ff813252f8737406fdad0da0fadac5793228af85d8f581e287b186dbc408b0cf15cd7b9
+DIST ValyriaTear-0.5.1.tar.gz 50024608 SHA256 756347f68b66c3a2dbadcfdcaaaf1e34895a6b5d9fa17c5d26af0fd9aae961e9 SHA512 2f9f9c23fbb537e532ba3791f6ddad0dae83a7c12c76ec3584174e96ea6fc0859537789991f210040ae967db2a1d4f55f8331f6722faff0cde3e4b5b835ec4ea WHIRLPOOL a7f8f232df7df0d915e2ac195809a5a827beeeb1efc7d532bfb53d153d19b91b71a50c9610047d07aa510cb1a3c6ed956dbe0c2756e475c72c5b4de503666fc3
+EBUILD valyriatear-0.5.1.ebuild 1523 SHA256 c48c9bf8dfbd96caee6b51b552e0914187bc6992f8236801f6909db31c9c5e9c SHA512 3f3c71e50fa8dc786342b21fa8a9d9774c953585de4f7232e4375e1e70e31f36d57f62377ac76baa87c6316fc644abf445e4cfd7f1ce56194e0824b2b3f831e3 WHIRLPOOL 6fc7576460002d598c2ae7750129ada223f733b67256543458415af395fa5672ac8c66de58f747b93206a545dff0ef5c3fc968372502decd16bea8e925f396a5
+MISC ChangeLog 635 SHA256 bc8fbfa084497afb8e96fb0841ecdfbc6fd9d5f4d23c21438647697f35574e47 SHA512 8ef1709eea4917e0b03e9ae33f528a806454545cb56859c655bd98c4d11fa1917c55ed93878055e19c1e6ed29271d5a7b9fb71afd52ba6ad03c73ea9b8f7157e WHIRLPOOL 1090dc8772edaddf5a831c913c55c0c0f4aba29d542e72a8ec8b4ceb464c9722a6bb013fb750c3c7172c6d06277d37875dbf2c48e9f5695cd3f0668509a6d3b2
 MISC metadata.xml 341 SHA256 0756d6cf029e9160b796ab816a9da3fab8db36c6c60df76467b244a80236f690 SHA512 2f4e8254f74a199b009ac1e53b94118470756688f6ac8d62b18a3b57a6ae3ff111b4a74973a1d46119cfcfa50f83cae8b0169ce6f3e6fca85d125b3d1c15df3c WHIRLPOOL faab63968d826df3f0b94287eb9a7afa6213eda882a531387f9641f697c5d1ef8ea1c015b730f3677f9a011c1705bf6f2985420f9e68ac6987b0f01741bbc4a6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRg8i/AAoJEFpvPKfnPDWzWOUIAKfYD5C+L30TEy01v2kL7WRd
-usGV6mW032QEprU8wFIKT++xnsVAVqGhYpFUpnkA5SY80H6SplyRrSr7gUMFIIBg
-PsfQwmprEmAlIBlkduqlutfdX43DB8lTQNRK2iPVmnpQKsLJfMw4MpTGbQxMflp7
-TM0kzCIeTzc2obVsDMX2ZSncFQw0mtXz5SxqEZ5tCwQB2XY60ucROOYS9NjAblD4
-KL5fpZMYwwJTMSjGMtFrtq1d8FuEO9IMw0YSARz/pdPI3EjJrB7RiCSr4e4vPvxa
-4sEM+Vnv4dzhSYdFRZYp4dLSNQX+SYMJENBd+HOQLTeokEJPltpgWJl0Doi2c3g=
-=2rMD
+iQEcBAEBCAAGBQJRhCekAAoJEFpvPKfnPDWz3roH/1mtqP6dRkLxacjSQGaNiVlo
+zvtpI1Oegp6eoyOMtw0/NHEw2a+pktqN7+iJxFJCEfFEHGIsrLqmsfIjS85eG2ZY
+pFgXBAQaGknME7kZuimCMqg9ZUnQLdkzfVesypYF7Ntuo2fa2h58GSc2aNgS1D7q
+K9UgWZksy6Wi1fDEeT/uaMiWR30f7j15cNK9EG8jRbTXQPzouukPTTtxWVB7dZaD
+Jpe/YgOqgmEox4SrIZfGeHZXJWXES3/fEz/Ub6VVYGWEroVKpx6VrXhUZlY+nz/c
+8yMPhCqhwwN3yD3zvW4YaZ/DJxOsHkxoz/NlZKjG+FJx/Haegxcfu5rUy4LokLg=
+=Hm5a
 -----END PGP SIGNATURE-----
