@@ -1,6 +1,9 @@
 # ChangeLog for games-rpg/valyriatear
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-rpg/valyriatear/ChangeLog,v 1.2 2013/05/03 14:24:59 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-rpg/valyriatear/ChangeLog,v 1.3 2013/05/03 21:09:52 hasufell Exp $
+
+  03 May 2013; Julian Ospald <hasufell@gentoo.org> valyriatear-0.5.1.ebuild:
+  update SRC_URI
 
   03 May 2013; Julian Ospald <hasufell@gentoo.org> valyriatear-0.5.1.ebuild:
   fix licenses
